Removed left float from form to ensure center alignment

--- a/css/style.css
+++ b/css/style.css
@@ -33,7 +33,6 @@ p {
   margin: 20px auto;
   width: 90%;
   max-width: 400px;
-  float: left;
   display: flex;
   flex-direction: column;
   align-items: center;
